@@ -5,6 +5,7 @@ import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -193,7 +194,7 @@ public class PerformanceModifyService {
 
 				return schedule;
 			})
-			.toList();
+			.collect(Collectors.toList());
 
 		performance.assignScheduleNumbers(schedules);
 
